Unit tests finished

--- a/SweetKompasPlugin/SweetKompasPlugin.csproj
+++ b/SweetKompasPlugin/SweetKompasPlugin.csproj
@@ -34,18 +34,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="KAPITypes">
-      <HintPath>..\..\..\KompasSDK\KAPITypes.dll</HintPath>
+      <HintPath>C:\KompasSDK\KAPITypes.dll</HintPath>
     </Reference>
     <Reference Include="Kompas6API5">
-      <HintPath>..\..\..\KompasSDK\Kompas6API5.dll</HintPath>
+      <HintPath>C:\KompasSDK\Kompas6API5.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="Kompas6Constants">
-      <HintPath>..\..\..\KompasSDK\Kompas6Constants.dll</HintPath>
+      <HintPath>C:\KompasSDK\Kompas6Constants.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="Kompas6Constants3D">
-      <HintPath>..\..\..\KompasSDK\Kompas6Constants3D.dll</HintPath>
+      <HintPath>C:\KompasSDK\Kompas6Constants3D.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
