Refactring. Some realisation moved to inside Candy-classes and abstact class Candy. Now: ICandy -> abstract class Candy RectCandy -> Rect ShereCandy -> Sphere CylinderCandy - > Cylinder

--- a/SweetKompasPlugin/SweetKompasPlugin.csproj
+++ b/SweetKompasPlugin/SweetKompasPlugin.csproj
@@ -61,8 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Candy.cs" />
     <Compile Include="Model\CandySettings.cs" />
-    <Compile Include="Model\CylinderCandy.cs" />
+    <Compile Include="Model\Cylinder.cs" />
     <Compile Include="Model\Exceptions\CandyCountException.cs" />
     <Compile Include="Model\Exceptions\CandyHeightException.cs" />
     <Compile Include="Model\Exceptions\CandyLengthException.cs" />
@@ -71,10 +72,9 @@
     <Compile Include="Model\Exceptions\FormDepthByHeightException.cs" />
     <Compile Include="Model\Exceptions\FormDepthByLengthException.cs" />
     <Compile Include="Model\Exceptions\FormDepthByWidthException.cs" />
-    <Compile Include="Model\ICandy.cs" />
     <Compile Include="Model\KompasWrapper.cs" />
-    <Compile Include="Model\RectCandy.cs" />
-    <Compile Include="Model\SphereCandy.cs" />
+    <Compile Include="Model\Rect.cs" />
+    <Compile Include="Model\Sphere.cs" />
     <Compile Include="Model\Validator.cs" />
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
